[tool.poetry]
name = "sylvester"
version = "0.1.0"
description = "A streamlit-based Twitter analysis tool for hackers"
authors = ["Alejandro Piad <apiad@apiad.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.67.1"
tweepy = "^3.9.0"
tqdm = "^4.49.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = {version = "^20.8b1", allow-prereleases = true}
pipreqs = "^0.4.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
